[metadata]
name = example-package-Krammnic
version = 0.0.1
author = Mark Obozov
author_email = krammnic@yandex.ru
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/MimApps/PPython/
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache License, Version 2.0
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
